<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.AddNewMoviePage">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/img" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        android:textColor="@color/firstPageTitle"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnShowEditFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/buttonsFirstPage"
        android:hint="@string/create_a_new_movie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_view_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/buttonsFirstPage"
        android:hint="@string/view_available_movies"
        app:layout_constraintEnd_toEndOf="@id/btnShowEditFields"
        app:layout_constraintStart_toStartOf="@id/btnShowEditFields"
        app:layout_constraintTop_toBottomOf="@+id/btnShowEditFields" />

    <EditText
        android:id="@+id/movie_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:gravity="start"
        android:hint="@string/movie_s_name"
        android:textColorHint="@color/firstPageTitle"
        app:layout_constraintTop_toBottomOf="@+id/button_view_movies" />

    <EditText
        android:id="@+id/movie_year_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:gravity="start"
        android:hint="@string/year_of_release"
        android:textColorHint="@color/firstPageTitle"
        app:layout_constraintTop_toBottomOf="@+id/movie_name_input" />

    <EditText
        android:id="@+id/movie_rating_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:gravity="start"
        android:hint="@string/movie_rating"
        android:textColorHint="@color/firstPageTitle"
        app:layout_constraintTop_toBottomOf="@+id/movie_year_input" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_insert_the_movie"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/firstPageTitle"
        android:hint="Add"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="@+id/movie_rating_input"
        app:layout_constraintStart_toStartOf="@+id/movie_rating_input"
        app:layout_constraintTop_toBottomOf="@+id/movie_rating_input"
        app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>